Cambios esteticos y correccion en el kit de los iconos

--- a/juego.html
+++ b/juego.html
@@ -7,7 +7,7 @@
     <link
       rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/litera/bootstrap.min.css"/>
     <link rel="stylesheet" href="./css/estilos.css"/>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://kit.fontawesome.com/f0af581af4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
 
