--- a/instrucciones.html
+++ b/instrucciones.html
@@ -6,7 +6,7 @@
     <title>Guess Game</title>
     <link
       rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/litera/bootstrap.min.css"/>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script> 
+      <script src="https://kit.fontawesome.com/f0af581af4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/estilos.css"/>
    
 </head>
@@ -19,7 +19,7 @@
         </i>
     </button>
   </form>
-  <div class="cardInstrucciones" style="text-align: center;background-image: url('./img/Instrucciones.png');">
+  <div class="card" style="text-align: center;background-image: url('./img/Instrucciones.png');">
     <div class="container">
 
         <h1 class="card-title">
