--- a/juego.html
+++ b/juego.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess Game</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link
       rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/litera/bootstrap.min.css"/>
     <link rel="stylesheet" href="./css/estilos.css"/>
