Instrucciones en español e ingles, se agregan signos de puntiacion y espacios

--- a/instruccionesEspaniol.html
+++ b/instruccionesEspaniol.html
@@ -25,11 +25,11 @@
     <div class="container">
 
         <h1 class="card-title">
-            Instructions    
+            Instrucciones   
         </h1>
-        <form action="instruccionesEspaniol.html" style="text-align: center;">
+        <form action="instrucciones.html" style="text-align: center;">
             <button type="submit" class = "btnLenguaje">
-                    Spanish
+                Inglés
             </button>
           </form>
           <br>
@@ -37,7 +37,7 @@
             <h6>
                 <span class="hiddentxt">
                     <a>
-                        1. Click on "Play".
+                        1. Presiona el botón que dice play.
                     </a>
                 </span>
                 <span class="hiddenimg"><img src="./img/Instrucciones/botonInicio.png" width="400" />
@@ -50,7 +50,7 @@
             <h6>
                 <span class="hiddentxt">
                     <a>
-                        2. After you enter the game, you will be prompted with the question: "Can you guess the word?".
+                        2. Cuando estés en la pantalla del juego verás la pregunta: “Can you guess the word?".
                     </a>
                 </span>
                 <span class="hiddenimg"><img  src="./img/Instrucciones/pregunta.png" width="400" />
@@ -63,7 +63,7 @@
             <h6>
                 <span class="hiddentxt">
                     <a>
-                        3. Below the question, you will find a box with the word "HINT". 
+                        3. Debajo de esta pregunta encontrarás un cuadro con la palabra “HINT”. 
                     </a>
                 </span>
                 <span class="hiddenimg"><img  src="./img/Instrucciones/Pista1.png" width="400" />
@@ -75,7 +75,7 @@
             <h6>
                 <span class="hiddentxt">
                     <a>
-                        4. Put your mouse over the box in order to read the hint about the word you are guessing (if you want to listen the hint, press the sound icon).
+                        4. Ponga el mouse sobre el cuadro para leer la pista de la palabra que estás adivinando (si quiere escuchar la pista, presione el icono de sonido).
                     </a>
                 </span>
                 <span class="hiddenimg"><img src="./img/Instrucciones/Pista2.png" width="400" />
@@ -87,7 +87,7 @@
             <h6>
                 <span class="hiddentxt">
                     <a>
-                        5. After reading the hint, select the letters that form the name of the word that you think is the correct one.
+                        5. Después de leer la pista, selecciona las letras que forman la palabra que crees que es la correcta.
                     </a>
                 </span>
                 <span class="hiddenimg"><img  src="./img/Instrucciones/teclado.png" width="400" />
@@ -99,7 +99,7 @@
             <h6>
                 <span class="hiddentxt">
                     <a>
-                        6. To select any letter, click on the button containing the letter you want.
+                        6. Para seleccionar cualquier letra, haga clic en el botón que contiene la letra que desea.
                     </a>
                 </span>
                 <span class="hiddenimg"><img src="./img/Instrucciones/seleccionarLetra.png" width="400" />
@@ -112,7 +112,7 @@
             <h6>
                 <span class="hiddentxt">
                     <a>
-                        7. You will have as many turns as there are letters in each word. (For example, a seven-letter word will give you 7 turns, and a four-letter word will give you 4 turns).
+                        7. Tendrás tantos turnos como letras haya en cada palabra. (Por ejemplo, una palabra de siete letras le dará 7 turnos y una palabra de cuatro letras le dará 4 turnos).
                     </a>         
                 </span>                  
             </h6>
@@ -122,7 +122,7 @@
         <h6>
             <span class="hiddentxt">
                 <a>
-                    8. When you successfully guess the word or you run out of turns, you will be prompted with a window in which you can see your score. After that, you will be prompted with a window in which you can find the word, a sentence using that word, and an image of the word you were guessing.
+                    8. Cuando aciertes la palabra o te quedes sin turnos, aparecerá una ventana en la que podrás ver tu puntuación. Después de eso, aparecerá una ventana en la que puedes encontrar la palabra, una oración que use esa palabra y una imagen de la palabra que estabas adivinando.
                 </a>
             </span> 
         </h6>
